fix: FRO-20 fix spacing issue

--- a/scrybe_frontend/src/pages/services-page/Services.scss
+++ b/scrybe_frontend/src/pages/services-page/Services.scss
@@ -63,13 +63,14 @@
 @mixin container {
     width: 90%;
     margin: auto;
+    padding: 0;
 }
 
 @mixin heading {
     color: #1A1818;
-    font-weight: 800;
+    font-weight: 600;
     font-size: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 
@@ -77,11 +78,11 @@
     background: url(./assets/hero-bg.png);
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 7rem 0 4rem 0;
     font-family: 'Kanit', sans-serif;
 
     .container {
         @include container;
+        padding: 4rem 0 7rem 0;
     }
 
     .hero-flex {
@@ -126,8 +127,7 @@
 }
 
 .offer-section {
-    padding: 6rem 0;
-
+    padding: 10rem 0;
     .container {
         @include container;
         display: flex;
@@ -146,7 +146,7 @@
         font-size: 35px;
         text-align: center;
         width: 70%;
-        line-height: 1.7;
+        line-height: 1.6;
         margin: auto;
     }
 
@@ -175,28 +175,29 @@
         }
     
         .wecan-txt {
-            width: 50%;
+            width: 55%;
     
             h1 {
                 @include heading;
             }
     
             li {
-                font-size: 27px;
+                font-size: 30px;
                 line-height: 1.6;
                 font-weight: 300;
             }
     
             .list {
-                margin-bottom: 30px;
+                margin-bottom: 35px;
             }
         }
     
         .wecan-img {
-            width: 50%;
+            width: 40%;
+            margin: auto;
 
-            img {
-                width: 50%
+            .we-img {
+                width: 70%
             }
         }
     }
@@ -210,7 +211,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 12rem 0;
+            padding: 8rem 0;
     
             .trans-txt {
                 width: 50%;
@@ -230,8 +231,8 @@
                         }
     
                         p {
-                            font-size: 25px;
-                            font-weight: 500;
+                            font-size: 27px;
+                            font-weight: 400;
                             line-height: 1.7
                         }
                     }
@@ -324,7 +325,7 @@
     .offer-section {
         p {
             width: 90%;
-            font-size: 5.5vw;
+            font-size: 4.5vw;
         }
 
         h1 {
@@ -342,8 +343,8 @@
             }
 
             .wecan-img {
-                img {
-                    width: 70%;
+                .we-img {
+                    width: 55%;
                     display: block;
                     margin: auto;
                 }
@@ -356,7 +357,8 @@
                 }
 
                 li {
-                    font-size: 25px;
+                    font-size: 20px;
+                    text-align: center;
                 }
             }
         }
@@ -379,6 +381,11 @@
                     .check-container {
                         span {
                             justify-content: center;
+                            gap: 1rem;
+
+                            p {
+                                text-align: center;
+                            }
                         }
                     }
 
